--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p>This philosophy is reflected in my projects, from developing practical tools like a BMI Calculator to complex systems like an AI-powered Speech Analyzer.
                         As a lifelong learner and dedicated problem-solver, I am eager to apply my diverse skill set to a challenging role within a forward-thinking team. 
                         My ultimate goal is to contribute to innovative projects, learn from experienced mentors, and grow into a valuable asset who helps build the next generation of web technology.</p>
-                    <a href="https://www.google.com/url?sa=E&q=https%3A%2F%2Fdrive.google.com%2Fuc%3Fexport%3Ddownload%26id%3D1Hrstm-SfRHfEhwhReBKQkjCFccNM7x5V" class="cta-button" download>Download CV</a> <!-- ** আপনার CV ফাইল এখানে লিঙ্ক করুন ** -->
+                    <a href="https://drive.google.com/uc?export=download&id=1Hrstm-SfRHEhwhReBKQkiCFocNM7x5V" class="cta-button" download>Download CV</a> <!-- ** আপনার CV ফাইল এখানে লিঙ্ক করুন ** -->
                 </div>
             </div>
         </section>
