--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="skill-card"><h3>JavaScript (ES6+)</h3></div>
                 <div class="skill-card"><h3>Python</h3></div>
                 <div class="skill-card"><h3>Flask & Django</h3></div>
-                <div class="skill-card"><h3>Penitretion Test</h3></div>
+                <div class="skill-card"><h3>Penetration Testing</h3></div>
                 <!-- ** আপনার স্কিলগুলো এখানে যোগ করুন ** -->
             </div>
         </section>
